crates/aion-awl/tests/fixtures/rev2/schema-doors/valid/import_constraints.awl
//! Register a profile; the imported schema's constraint keywords ride along untouched by typing.
workflow import_constraints
  input profile: Profile
  outcome registered: type Registered, route success
  outcome refused: type Refused, route failure

type Profile = schema("profile.schema.json")

type Registered { handle: String }
type Refused    { reason: String }

worker doors
  action register(profile: Profile) -> Registered

step gate
  profile |> .handle -> handle

  outcome adult: when profile.age >= 18, route enroll
  outcome minor: otherwise, route refused(reason: "too young to register: " + handle)

step enroll
  profile |> register |> route registered
